--- a/myproject/jumbotron/app.yaml
+++ b/myproject/jumbotron/app.yaml
@@ -1,17 +1,29 @@
-application: engineapp
+application: thedrunkards01
 version: 1
 runtime: python27
 api_version: 1
-threadsafe: yes
+threadsafe: true
 
 handlers:
-- url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
 
-- url: .*
-  script: main.app
+- url: /stylesheets
+  static_dir: stylesheets
+
+- url: /images
+  static_dir: images
+
+# core bootstrap
+- url: /dist
+  static_dir: dist
+
+# handler for front page
+
+- url: /
+  script: thedrunkards01.app
 
 libraries:
+- name: jinja2
+  version: latest
+
 - name: webapp2
-  version: "2.5.2"
+  version: latest
