--- a/myproject/jumbotron/app.yaml
+++ b/myproject/jumbotron/app.yaml
@@ -21,6 +21,12 @@ handlers:
 - url: /
   script: thedrunkards01.app
 
+- url: /about
+  script: thedrunkards01.app
+
+- url: /stall1
+  script: thedrunkards01.app
+
 libraries:
 - name: jinja2
   version: latest
