--- a/myproject/jumbotron/app.yaml
+++ b/myproject/jumbotron/app.yaml
@@ -27,11 +27,26 @@ handlers:
 - url: /stall1
   script: thedrunkards01.app
 
+- url: /stall1_page
+  script: thedrunkards01.app
+  login: required
+
 - url: /stall2
+  script: thedrunkards01.app
+
+- url: /stall2_page
   script: thedrunkards01.app
 
 - url: /stall3
   script: thedrunkards01.app
+
+- url: /stall3_page
+  script: thedrunkards01.app
+
+# All other pages require login
+- url: /.*
+  script: thedrunkards01.app
+  login: required
 
 libraries:
 - name: jinja2
@@ -39,3 +54,4 @@ libraries:
 
 - name: webapp2
   version: latest
+###
